--- a/api/website/server.ejs
+++ b/api/website/server.ejs
@@ -2,8 +2,35 @@
 <html>
     <head>
         <link rel="stylesheet" href="<%= base %>/style.css">
+        <script>
+            function addToFilter() {
+                var newWord = document.getElementById("filterin").value;
+                if(!newWord) return;
+                if(newWord.match(/[^a-zA-Z0-9 ]/gi)) return alert("Illegal character. Make sure to only use letters");
+                
+                let newDom = document.createElement("option");
+                newDom.value = newWord;
+                newDom.innerText = newWord;
+                
+                document.getElementById("filter").appendChild(newDom);
+                
+                document.getElementById("filterin").value = "";
+            }
+            function removeWord() {
+                var wordToRemove = document.getElementById("filter").value;
+                
+                document.getElementById("filter")
+                    .removeChild(
+                        [...document.getElementById("filter")]
+                            .find(function(x) { return x.value == wordToRemove })
+                    );
+            }
+            function clearAll() {
+                document.getElementById("filter").innerHTML = "";
+            }
+        </script>
     </head>
-    <body>
+    <body style="background-color: #2C2F33">
         <h1><%= data.name %></h1>
         <div>
             <div>
@@ -34,10 +61,136 @@
                     <h5>Nicknames</h5><input type="checkbox" id="censor-nick" <%= data.db.censor.nick ? "checked" : "" %>>
                     <h5>Reactions</h5><input type="checkbox" id="censor-react" <%= data.db.censor.react ? "checked" : "" %>>
             </div>
+            <div>
+                <h3>Filter</h3>
+                    <input id="filterin" placeholder="Add to filter"><button onclick="addToFilter()">Add</button><div />
+                    <script>
+                        document.getElementById("filterin").onkeydown = function(event) {
+                            if(event.keyCode == 13) addToFilter();
+                        }
+                    </script>
+                    <select id="filter">
+                        <% data.db.filter.forEach(x=>{ %>
+                            <option value="<%= x %>"><%= x %></option>
+                        <% }) %>
+                    </select>
+                    <button onclick="removeWord()">Remove</button>
+                    <button onclick="clearAll()">Clear All</button>
+            </div>
+            <div>
+                <h3>Pop message</h3>
+                <h5>Seconds until delete</h5> <input type="number" min="0" max="120" placeholder="Never" id="poptime" value="<%= data.db.pop_time / 1000%>">
+                <script>
+                    document.getElementById("poptime").onchange = function() {
+                        if(document.getElementById("poptime").value == 0) {
+                            document.getElementById("poptime").value = "";
+                        }
+                        if(document.getElementById("poptime").value > 120) {
+                            document.getElementById("poptime").value = 120;
+                        }
+                    }
+                </script>
+                <div />
+                <h5>Message</h5> 
+                    <select id="msgtype">
+                        <option value="1">Default</option>
+                        <option value="2">Disabled</option>
+                        <option value="3">Custom</option>
+                    </select>
+                    <input type="text" id="custommsg" placeholder="Message">
+                    <script>
+                        document.getElementById("msgtype").value = "<%= data.db.msg === null ? "1" : data.db.msg === false ? "2" : "3" %>"
+                        <% if(data.db.msg) { %>
+                            document.getElementById("custommsg").value = "<%=data.db.msg%>"
+                        <% } %>
+                        function chngMSG() {
+                            if(document.getElementById("msgtype").value == 3) {
+                                document.getElementById("custommsg").hidden = false;
+                            } else {
+                                document.getElementById("custommsg").hidden = true;
+                            }
+                        }
+                        document.getElementById("msgtype").onchange = chngMSG
+                        chngMSG();
+                    </script>
+                    
+            </div>
+            <div>
+                <h3>Anti-GhostPing</h3>
+                <input type="checkbox" id="agp" <%= data.db.antighostping ? "checked" : "" %>>
+            </div>
         </div>
+        <button onclick="submit()" style="width: 100px; height: 100px; top: 0px; right: 0px; position: absolute">submit</button>
         <script>
             document.getElementById("log").value = "<%= data.db.log %>"
             document.getElementById("role").value = "<%= data.db.role || "null"%>"
+            function buildObject() {
+                var obj = {
+                    "antighostping": false,
+                    "base": true,
+                    "censor": {
+                        "react": true,
+                        "msg": true,
+                        "emsg": true,
+                        "nick": true
+                    },
+                    // "channels": [
+            
+                    // ],
+                    "filter": [
+            
+                    ],
+                    "log": null,
+                    "msg": null,
+                    "pop_delete": 3000,
+                    "role": null,
+                    // "uncensor": [
+            
+                    // ],
+                    // "webhook": false,
+                    // "punishment": {
+                    //     "amount": 3,
+                    //     "role": "",
+                    //     "on": false
+                    // }
+                }
+                
+                obj.base     = document.getElementById("base").checked;
+                obj.censor   = {
+                    msg: document.getElementById("censor-msg").checked     || false,
+                    emsg: document.getElementById("censor-emsg").checked   || false,
+                    nick: document.getElementById("censor-nick").checked   || false,
+                    react: document.getElementById("censor-react").checked || false,
+                };
+                obj.log      = document.getElementById("log").value;
+                obj.role     = document.getElementById("role").value;
+                if(obj.role == "null") obj.role = null;
+                obj.filter   = [...document.getElementById("filter").children].map(x=>x.value);
+                obj.antighostping = document.getElementById("agp").checked || false
+                obj.pop_delete    = ["", 0, undefined].includes(document.getElementById("poptime").value) ? null : document.getElementById("poptime").value * 1000;
+                var msgtype = document.getElementById("msgtype").value;
+                if(msgtype == 3 && !document.getElementById("custommsg").value) return alert("Can't be an empty string");
+                obj.msg = msgtype == 1 ? null : msgtype == 2 ? false : document.getElementById("custommsg").value;
+                
+                return obj;
+            }
+            
+            
+            function request(endpoint, method, body, cb) {
+                var xhr = new XMLHttpRequest();
+                xhr.open(method, "https://api.jt3ch.net/censorbot/v3"+endpoint);
+                xhr.setRequestHeader("Content-Type", "application/json");
+                xhr.setRequestHeader("Authorization", "<%= token %>");
+                xhr.onload = function() {
+                    cb(JSON.parse(xhr.response));
+                    console.log(xhr.response);
+                }
+                xhr.send(body ? JSON.stringify(body) : null);
+            }
+            
+            function submit() {
+                request("/guilds/<%= data.id %>/settings", "POST", buildObject(), console.log);
+            }
         </script>
     </body>
 </html>
