--- a/api/website/style.css
+++ b/api/website/style.css
@@ -20,6 +20,120 @@
     font-weight: bold;
 }
 
+.servername {
+    margin-left: 30%;
+}
+
+h5 {
+    color: white;
+    font-family: 'Roboto', sans-serif;
+}
+
 .sep {
     float: left;
+}
+
+.box {
+    width: 40%;
+    left: 30%;
+    position: absolute;
+}
+/* The switch - the box around the slider */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #2196F3;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
+input {
+    width: 41%;
+    padding-left: 10px;
+    border-radius: 10px;
+    background-color: #23272A;
+    color: white;
+}
+
+select {
+    padding: 3px;
+    width: fit-content;
+    border-radius: 10px;
+    background-color: #23272A;
+    color: white;
+}
+
+button {
+  background-color: #23272A; /* Green */
+  border: none;
+  color: white;
+  padding: 3px 5px;
+  border-radius: 10px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  -webkit-transition-duration: 0.4s; /* Safari */
+  transition-duration: 0.4s;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #4CAF50;
+  color: white;
 }
