Separated config into a secret and public variant

--- a/api/website/pages/errors/auth.ejs
+++ b/api/website/pages/errors/auth.ejs
@@ -10,6 +10,7 @@
             .txt {
                 font-family: 'Oswald', sans-serif;
                 font-size: 50px;
+                margin-bottom: -30px;
             }
             .txt2 {
                 font-family: 'Source Sans Pro', sans-serif;
