--- a/api/website/pages/logout.ejs
+++ b/api/website/pages/logout.ejs
@@ -34,8 +34,8 @@
         <title>Error</title>
     </head>
     <body>
-        <h1 class="txt">You're not where you're supposed to be!</h1>
-        <p class="txt2">Either this server doesn't exist or you're not allowed to change it's settings</p>
-        <button onclick="window.location.replace('<%= base %>')">Back to the Home Page</button>
+        <h1 class="txt">Logged Out!</h1>
+        <p class="txt2">See you again soon</p>
+        <button onclick="window.location.replace('<%= base %>')">Log back in</button>
     </body>
 </html>
