--- a/api/website/pages/guild.ejs
+++ b/api/website/pages/guild.ejs
@@ -149,6 +149,7 @@
                     </script>
                     
             </div>
+        <button id="save" class="but" style="display: none; width: 100px; height: 100px; margin-left: 100%" onclick="submit()">Save</button>
             </div>
         </div>
         <button id="tl" class="but" onclick="back()">Back</button>
