--- a/api/website/pages/guilds.ejs
+++ b/api/website/pages/guilds.ejs
@@ -124,7 +124,7 @@
                         </div>
                     </div>
                 <% }) %>
-                <button id="tr" class="but" onclick="refresh()">Refresh</button>
+                <button id="tr" class="but" onclick="refresh()">Refresh Servers</button>
                 <button id="tl" class="but" onclick="logout()">Logout</button>
         </div>
     </h1>
